@@ -4,6 +4,7 @@ class RemoteFirstdataE4V27Test < Test::Unit::TestCase
   def setup
     @gateway = FirstdataE4V27Gateway.new(fixtures(:firstdata_e4_v27))
     @credit_card = credit_card
+    @credit_card_master = credit_card('5500000000000004', :brand => 'master')
     @bad_credit_card = credit_card('4111111111111113')
     @credit_card_with_track_data = credit_card_with_track_data('4003000123456781')
     @amount = 100
@@ -76,6 +77,54 @@ class RemoteFirstdataE4V27Test < Test::Unit::TestCase
     assert_equal response.params['ecommerce_flag'], @options_with_authentication_data[:eci]
     assert_equal response.params['xid'], @options_with_authentication_data[:xid]
     assert_success response
+  end
+
+  def test_successful_purchase_with_stored_credentials_initial
+    stored_credential = {
+      stored_credential: {
+        initial_transaction: true,
+        reason_type: 'unscheduled',
+        initiator: 'customer'
+      }
+    }
+    assert response = @gateway.purchase(@amount, @credit_card, @options.merge(stored_credential))
+    assert_match(/Transaction Normal/, response.message)
+    assert_success response
+    assert_equal '1', response.params['stored_credentials_indicator']
+    assert_equal 'U', response.params['stored_credentials_schedule']
+    assert_not_nil response.params['stored_credentials_transaction_id']
+  end
+
+  def test_successful_purchase_with_stored_credentials_initial_master
+    stored_credential = {
+      stored_credential: {
+        initial_transaction: true,
+        reason_type: 'unscheduled',
+        initiator: 'customer'
+      }
+    }
+    assert response = @gateway.purchase(@amount, @credit_card_master, @options.merge(stored_credential))
+    assert_match(/Transaction Normal/, response.message)
+    assert_success response
+    assert_equal 'S', response.params['stored_credentials_indicator']
+    assert_equal 'U', response.params['stored_credentials_schedule']
+    assert_not_nil response.params['stored_credentials_transaction_id']
+  end
+
+  def test_successful_purchase_with_stored_credentials_subsequent_recurring
+    stored_credential = {
+      stored_credential: {
+        initial_transaction: false,
+        reason_type: 'recurring',
+        initiator: 'merchant'
+      }
+    }
+    assert response = @gateway.purchase(@amount, @credit_card, @options.merge(stored_credential))
+    assert_match(/Transaction Normal/, response.message)
+    assert_success response
+    assert_equal 'S', response.params['stored_credentials_indicator']
+    assert_equal 'S', response.params['stored_credentials_schedule']
+    assert_not_nil response.params['stored_credentials_transaction_id']
   end
 
   def test_unsuccessful_purchase
